# garbage-codes-season-03

./: main.py
Backend Stuffs/EcomProject/: manage.py  pyproject.toml
Backend Stuffs/EcomProject/ApnaDukaan/: asgi.py  settings.py  urls.py  wsgi.py
Docker(Hands on)/: notes.md
Docker(Hands on)/hello-docker/: Dockerfile
Ui Projects/Responsive Profile card/: index.html  style.css
pythons revision/: basics.py  built-in-func.py  problems on control flow.py
pythons revision/OOPs/: basics.py
pythons revision/Problems/Control Flow/: pr-02.py  pr-03.py  pr-04.py
pythons revision/Problems/Functions/: pr-01.py  pr-02.py  pr-03.py
pythons revision/Problems/Lists&Tuples/: pr-01.py  pr-02.py
