[tool.poetry]
name = "apnadukaan"
version = "0.1.0"
description = "It's an Ecommerce Platform"
authors = ["ashwinPy <ashwinam31@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
